--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/styles.css">
   <title>Weather Dashboard</title>
 </head>
 <body>
+  <div class="card-search">
+    <div class="search">
+      <input type="text" placeholder="City Name">
+      <button>Search</button>
+    </div>
+    <div class="card-container">
+      <div class="card-weather">
+        <h1 class="temperature">20°C</h1>
+        <h2 class="city">Mexico City</h2>
+        <img src="/assets/images/clear.png" class="icon">
   
+      </div>
+    </div>
+  </div>
+  
+  <script></script>
 </body>
 </html>
