Add information to README file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="card-search">
     <div class="search">
       <input type="text" placeholder="City Name">
-      <button>Search</button>
+      <button id="search-button">Search</button>
     </div>
     <div class="card-container">
       <div class="card-weather">
