Correct css displaying error

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@200;300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
   <title>Weather Dashboard</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
       <div class="card-weather">
         <h1 class="temperature">20°C</h1>
         <h2 class="city">Mexico City</h2>
-        <img src="/assets/images/clear.png" class="icon">
+        <img src="./assets/images/clear.png" class="icon">
   
       </div>
     </div>
