Made function to get today and forecast weather

--- a/index.html
+++ b/index.html
@@ -13,19 +13,74 @@
 <body>
   <div class="card-search">
     <div class="search">
-      <input type="text" placeholder="City Name">
+      <input type="text" id="search-input" placeholder="City Name">
       <button id="search-button">Search</button>
     </div>
-    <div class="card-container">
-      <div class="card-weather">
-        <h1 class="temperature">20°C</h1>
-        <h2 class="city">Mexico City</h2>
-        <img src="./assets/images/clear.png" class="icon">
-  
+  </div>
+
+  <div class="card-container">
+
+    <div class="card-weather" id="card-today">
+      <h1 class="temperature" id="temp-today"></h1>
+      <h2 class="city"></h2>
+      <img src="" class="icon" id="icon-today">
+      <div class="hum-wind-container">
+        <p class="humidity" id="hum-today"></p>
+        <p class="wind" id="wind-today"></p>
       </div>
     </div>
-  </div>
-  
-  <script></script>
+
+    <div class="card-weather" id="card-1">
+      <h1 class="temperature" id="temp-1"></h1>
+      <h2 class="city"></h2>
+      <img src="" class="icon" id="icon-1">
+      <div class="hum-wind-container">
+        <p class="humidity" id="hum-1"></p>
+        <p class="wind" id="wind-1"></p>
+      </div>
+    </div>
+
+    <div class="card-weather" id="card-2">
+      <h1 class="temperature" id="temp-2"></h1>
+      <h2 class="city"></h2>
+      <img src="" class="icon" id="icon-2">
+      <div class="hum-wind-container">
+        <p class="humidity" id="hum-2"></p>
+        <p class="wind" id="wind-2"></p>
+      </div>
+    </div>
+
+    <div class="card-weather" id="card-3">
+      <h1 class="temperature" id="temp-3"></h1>
+      <h2 class="city"></h2>
+      <img src="" class="icon" id="icon-3">
+      <div class="hum-wind-container">
+        <p class="humidity" id="hum-3"></p>
+        <p class="wind" id="wind-3"></p>
+      </div>
+    </div>
+
+    <div class="card-weather" id="card-4">
+      <h1 class="temperature" id="temp-4"></h1>
+      <h2 class="city"></h2>
+      <img src="" class="icon" id="icon-4">
+      <div class="hum-wind-container">
+        <p class="humidity" id="hum-4"></p>
+        <p class="wind" id="wind-4"></p>
+      </div>
+    </div>
+
+    <div class="card-weather" id="card-5">
+      <h1 class="temperature" id="temp-5"></h1>
+      <h2 class="city"></h2>
+      <img src="" class="icon" id="icon-5">
+      <div class="hum-wind-container">
+        <p class="humidity" id="hum-5"></p>
+        <p class="wind" id="wind-5"></p>
+      </div>
+    </div> 
+
+  </div>  
+  <scrip src="./assets/js/script.js"></script>
 </body>
 </html>
