--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
     </div> 
 
   </div>  
-  <scrip src="./assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
